link to image and logo

--- a/css/home.css
+++ b/css/home.css
@@ -1,6 +1,6 @@
 /*Real site begins here*/
 .background-picture-mountain {
-    background-image: url("./Images/Img-mountain.png");
+    background-image: url("../Images/Img-mountain.png");
     background-size: cover;
     background-repeat: no-repeat;
     padding-bottom: 60px;
