--- a/css/newstyles.css
+++ b/css/newstyles.css
@@ -35,6 +35,10 @@
   text-align: center;
 }
 
+.product:hover {
+  background: #ccc;
+}
+
 .product-name {
   margin: 0px;
   height: 15px;
@@ -48,6 +52,13 @@
 .product-image img{
   max-width: 100%;
   max-height: 210px;
+  transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
+}
+
+.product-image img:hover {
+  transform: scale(1.1); /*zoom-in effect*/
+  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.3);
+  filter: brightness(1.2); /*brightness increase*/
 }
 
 .detail {
