--- a/css/newstyles.css
+++ b/css/newstyles.css
@@ -34,7 +34,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  margin-top: 40px;
+  margin-bottom: 40px;
   margin-left: 30px;
   font-size: 1.5rem;
   font-weight: bold;
