--- a/css/checkoutsuccess.css
+++ b/css/checkoutsuccess.css
@@ -4,7 +4,7 @@ h1 {
     padding-top: 30px;
 }
 
-.Checkout-Success {
+Checkout-Success {
     background-color: #25ee0538;
     margin-top: 100px;
     text-align: center;
@@ -59,6 +59,36 @@ h1 {
     margin-left: 20px;
     margin-bottom: 40px;
 }
+
+.note-section { 
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 100px;
+}
+
+div.note {
+    text-align: center;
+    font-size: 20px;
+    background-color: #4CAF50; /* Green success message */
+    color: white;
+    max-width: 200px;
+
+    margin-left: 20px;
+    padding: 40px;
+    border-radius: 6px;
+    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+    opacity: 0; /* Start hidden */
+    transition: opacity 0.5s ease-in-out, right 0.5s ease-in-out;
+}
+
+.cart-page {
+    margin-left: 20px;
+    font-size: 20px;
+    opacity: 1; /* Ensure it's visible at the start */
+    transition: opacity 0.5s ease-in-out, visibility 0.5s ease-in-out;
+}
+
 
 @media (min-width: 400px) {
 
